Authentication with acces token and referes token and adding google auth
